tools/shook/src/snapshots/shook__config__tests__load_full_config.snap
---
source: src/config.rs
expression: cfg
---
Config {
    server: ServerConfig {
        port: 9090,
    },
    devop: DevOpConfig {
        vendor: Gitlab,
        token: "glpat-test",
        webhook_secret: "another-secret",
        allowed_repositories: [
            "org/repo-a",
            "org/repo-b",
        ],
        allowed_users: [
            "bob",
            "carol",
        ],
    },
    nomad: NomadConfig {
        url: "http://nomad.internal:4646",
        timeout_sec: 5.0,
        retry: 5,
    },
}
