tools/shook/src/snapshots/shook__config__tests__load_minimal_uses_defaults.snap
---
source: src/config.rs
expression: cfg
---
Config {
    server: ServerConfig {
        port: 8787,
    },
    devop: DevOpConfig {
        vendor: Github,
        token: "ghp_test",
        webhook_secret: "s3cr3t",
        allowed_repositories: [
            "my-org/my-repo",
        ],
        allowed_users: [
            "alice",
        ],
    },
    nomad: NomadConfig {
        url: "http://localhost:4646/v1/",
        timeout_sec: 3.0,
        retry: 3,
    },
}
