tools/shook/src/snapshots/shook__config__tests__test_invalid_config-repos_count.snap
---
source: src/config.rs
expression: err.description()
---
__all__: Validation error: Only one repository is allowed when runner count > 1. [{}]
