tools/shook/src/snapshots/shook__config__tests__test_invalid_config-runner_port.snap
---
source: src/config.rs
expression: err
---
x runners.runners: runner 'ghar-linux-dev-small': ports: invalid port mapping: 0:0
