tools/shook/src/snapshots/shook__config__tests__test_invalid_config-share_global_port.snap
---
source: src/config.rs
expression: err.description()
---
runners.__all__: Validation error: runner can not share global ports with multiple instances [{}]
