tools/shook/src/snapshots/shook__config__tests__test_invalid_config-share_port.snap
---
source: src/config.rs
expression: err
---
x runners.__all__: Validation error: runner can not share ports with multiple instances [{}]
