tools/shook/src/snapshots/shook__config__tests__test_invalid_config-users_counts.snap
---
source: src/config.rs
expression: err.description()
---
__all__: Validation error: Only one user is allowed when runner count > 1. [{}]
