tools/shook/src/snapshots/shook__config__tests__test_valid_config-custom_kioyu.snap
---
source: src/config.rs
expression: "serde_json::to_string_pretty(&config).unwrap()"
---
{
  "devop": {
    "allowed_repositories": [
      "self-host-runner"
    ],
    "allowed_users": [
      "Glatzel"
    ],
    "token": "token_xxxxx",
    "vendor": "github",
    "webhook_secret": "webhook_secret_xxxxxxx"
  },
  "kioyu": {
    "memory": 8192
  },
  "runners": {
    "ghar-linux-dev-small": {
      "cpus": 1,
      "envs": {
        "EPHEMERAL": "true",
        "RUNNER_LABELS": "self-hosted,ghar-linux-dev-small"
      },
      "image": "ghcr.io/glatzel/ghar-linux-dev",
      "memory": 512,
      "name": "ghar-linux-dev-small",
      "ports": {},
      "secrets": {},
      "volumes": {}
    }
  },
  "server": {
    "port": 8787
  }
}
