tools/shook/src/snapshots/shook__config__tests__test_valid_config-full_runners_config.snap
---
source: src/config.rs
expression: "serde_json::to_string_pretty(&config).unwrap()"
---
{
  "devop": {
    "allowed_repositories": "self-host-runner",
    "allowed_users": "Glatzel",
    "token": "token_xxxxx",
    "vendor": "github",
    "webhook_secret": "webhook_secret_xxxxxxx"
  },
  "kioyu": {
    "memory": 1024
  },
  "runners": {
    "ghar-linux-dev-small": {
      "count": 1,
      "cpus": 1,
      "envs": {
        "FOO": "BAR"
      },
      "image": "ghcr.io/glatzel/ghar-linux-dev",
      "memory": 512,
      "name": "ghar-linux-dev-small",
      "ports": {
        "123": 456
      },
      "secrets": {
        "SFOO": [
          "SBAR",
          "https://www.google.com/"
        ]
      },
      "volumes": {
        "/host_dir": "/target_dir"
      }
    }
  },
  "server": {
    "port": 8787
  }
}
